se agrego contenido

--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
 </head>
 <body>
 	<p>fernado</p>
+	<div class="container">
+		 <section class="section">
+		 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, sapiente cumque fugit sit accusantium at, facere optio sed ea quod culpa tempora adipisci vitae recusandae dolor dolore, a, libero temporibus.
+		 </section>
+		 <aside class="aside">
+		 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem quo, dolor consequuntur ducimus distinctio non, fugiat sint ab nemo quos nihil, nesciunt voluptates laborum officiis sapiente reprehenderit fugit pariatur doloribus.
+		 </aside>
+
+		 <footer class="footer">
+		 	-Fer
+		 </footer>
+	</div>
 </body>
 </html>
