se agrego footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	orem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quis quod minima deleniti voluptatum molestias ea debitis nam, sed suscipit vitae facilis sunt, eos incidunt ratione, nihil alias vel fuga.
 	
 	orem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quis quod minima deleniti voluptatum molestias ea debitis nam, sed suscipit vitae facilis sunt, eos incidunt ratione, nihil alias vel fuga.
+
+	<footer>
+		-Fernando
+	</footer>
 	
 </body>
 </html>
