se agrego mas contenido en el aside

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 		 </section>
 		 <aside class="aside">
 		 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem quo, dolor consequuntur ducimus distinctio non, fugiat sint ab nemo quos nihil, nesciunt voluptates laborum officiis sapiente reprehenderit fugit pariatur doloribus.
+		 	a
+		 	sdf
+		 	asf
+		 	sad
+		 	fsadf
+		 	
 		 </aside>
 
 		 <footer class="footer">
